Added a reaching definitions flow analysis
Added a function to build def-use and use-def chains.

Added a new pass deadCodeElimination that currently just builds up the
du and ud chains.  It does not yet eliminate any code.

Refactored shared code between this new analysis and the existing
analyses.

Added a number of standard printing functions to print bit vector sets
and local variable sets, etc.  These used to be defined where used.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10050 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/compiler/optimizations/Makefile.share
+++ b/compiler/optimizations/Makefile.share
@@ -1,7 +1,9 @@
 OPTIMIZATIONS_SRCS = \
 	collapseBlocks.cpp \
         copyPropagation.cpp \
+	deadCodeElimination.cpp \
 	liveVariableAnalysis.cpp \
+	reachingDefinitionsAnalysis.cpp \
 	removeUnnecessaryGotos.cpp
 
 CVS_SRCS = $(OPTIMIZATIONS_SRCS)
