--- a/test/release/examples/.cvsignore
+++ b/test/release/examples/.cvsignore
@@ -1,11 +1,14 @@
 a.out
 *.tmp
 beer
+blockLU
 genericStack
 genericStack2
 hello
+iterators
 jacobi
 jacobi-routine
 norm
+parallelQuickSort
 prod-cons
 tree_construct
