Implemented Steve's very lovely suggestion that we not blow away the bison/flex output files on a make clean unless CHPL_DEVELOPER is set.  This makes the release user's experience what one would expect -- if they do a make clean or clobber, they won't need to run flex/bison, just as they didn't when they first unpacked.  Nice, elegant solution.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10299 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/compiler/parser/Makefile
+++ b/compiler/parser/Makefile
@@ -16,11 +16,14 @@ OTHER_DEPEND_RULES = \
 
 include $(COMPILER_ROOT)/make/Makefile.compiler.subdirrules
 
+ifdef CHPL_DEVELOPER
 CLEAN_TARGS += \
 	*.tab.c \
 	*.yy.c \
 	*.tab.h \
 	*.output \
+
+endif
 
 lex.yy.c: chapel.lex chapel.tab.h
 	flex chapel.lex
