Added linkedList example to Makefile, README, and .cvsignore (David, I could've sworn you did this but can't find it in any of the logs).
Alphabetized the tests in the Makefile.

Fixed the description of hello.chpl in the README.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10353 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/.cvsignore
+++ b/test/release/examples/.cvsignore
@@ -3,11 +3,11 @@ a.out
 beer
 blockLU
 genericStack
-genericStack2
 hello
 iterators
 jacobi
 jacobi-routine
+linkedList
 norm
 parallelQuickSort
 prod-cons
