Continuing pass over examples directory:
* refactored README file into README and README.testing; updated
  contents
* created ramp of increasingly interesting hello world examples
* took pass over beer example


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10363 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/Makefile
+++ b/test/release/examples/Makefile
@@ -5,6 +5,8 @@ CHPL = chpl
 
 TARGETS = \
 	hello \
+	hello-config \
+	hello-module \
 	beer \
         blockLU \
 	genericStack \
@@ -24,6 +26,7 @@ all: $(TARGETS)
 clean: FORCE
 	rm -f $(TARGETS)
 	cd hpcc06 && $(MAKE) clean
+	./start_clean
 
 hpcc06: FORCE
 	cd hpcc06 && $(MAKE) all
