Initial version of man page.  Some formatting of the arguments to an option could be improved, but for the most part this should be above the bar.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10453 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/doc/man/Makefile
+++ b/doc/man/Makefile
@@ -10,7 +10,7 @@ clean:
 	rm *.1 *.ps *.pdf *.html
 
 %.1: %.txt Makefile
-	txt2man -s 1 -t $* -r $(VERSION) $< > $@
+	txt2man -s 1 -I locale -I pthreads -I"Compiler Information Options" -I"Compilation Trace Options" -I"Code Size Options" -I"Optimization Control Options" -I "Code Generation Options" -I"Linker Control Options" -B"cpp" -B"--no-cg-cpp-lines" -I "Miscellaneous Options" -t $* -r $(VERSION) $< > $@
 
 %.html: %.1
 	rman -f HTML $< > $@
