Changes name of arraySlices test to slices.  Updated Makefile, README and README.features to reflect this change.  Added slices test to list in .cvsignore.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10576 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/Makefile
+++ b/test/release/examples/Makefile
@@ -6,7 +6,6 @@ CHPL = chpl
 TARGETS = \
 	hello \
 	hello-module \
-	arraySlices \
 	beer \
         blockLU \
 	genericStack \
@@ -16,6 +15,7 @@ TARGETS = \
 	norm \
 	prodCons \
 	quicksort \
+	slices \
 	sparse \
 	tree \
 
