Added same -U flag for Cygwin makes as used for SunOS makes in order to get clean builds.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10716 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.cygwin
+++ b/make/Makefile.cygwin
@@ -4,3 +4,9 @@
 EXE_SUFFIX=.exe
 
 -include $(CHAPEL_ROOT)/make/Makefile.gnu
+
+#
+# seemingly necessary to get things like strtoull()
+#
+GEN_CFLAGS += -U__STRICT_ANSI__
+
