--- a/test/release/examples/.cvsignore
+++ b/test/release/examples/.cvsignore
@@ -4,6 +4,7 @@ hello
 hello-module
 beer
 blockLU
+fileIO
 genericStack
 iterators
 jacobi
@@ -16,3 +17,4 @@ reductions
 slices
 sparse
 tree
+Arr.dat
