Renamed release examples hpcc06 directory to hpcc to shed the connection to our hpcc06 entry since the codes have changed a lot since then and will likely continue to evolve.  Updated documentation that refers to hpcc06 and made gen_release script blow old hpcc06 directory away (not yet tested since the script uses the CVS tree to build the release).
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10742 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/Makefile
+++ b/test/release/examples/Makefile
@@ -22,17 +22,17 @@ TARGETS = \
 	tree \
 
 
-default: all hpcc06
+default: all hpcc
 
 all: $(TARGETS)
 
 clean: FORCE
 	rm -f $(TARGETS)
-	cd hpcc06 && $(MAKE) clean
+	cd hpcc && $(MAKE) clean
 	./start_clean
 
-hpcc06: FORCE
-	cd hpcc06 && $(MAKE) all
+hpcc: FORCE
+	cd hpcc && $(MAKE) all
 
 %: %.chpl
 	$(CHPL) -o $@ $<
