Change the spec Makefile to build the document using pdflatex instead of going through a dvi.  The old way is still there as the target "usedvi".  When built with pdflatex, add bookmarks for the title page and the table of contents. Also, I moved the usepackage for hyperref down be the latest usepackage command, as every web page I've seen about it says it should be the latest.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10758 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Makefile
+++ b/spec/Makefile
@@ -1,4 +1,9 @@
 all:
+	pdflatex spec
+	makeindex spec
+	pdflatex spec
+
+usedvi:
 	latex spec
 	makeindex spec
 	latex spec
@@ -8,7 +13,7 @@ all:
 clean:
 	rm -f *.aux *.blg *.bbl *.dvi *.log
 
-clobber:
+clobber: clean
 	rm -f spec.ps spec.pdf
 
 #
