Add options to the spec Makefile to get better syntax error messages and to halt on errors.  Add pdf options to fill in title, author, subject when you press ctrl+d in Acrobat.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10766 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Makefile
+++ b/spec/Makefile
@@ -1,7 +1,7 @@
 all:
-	pdflatex spec
+	pdflatex -file-line-error -halt-on-error spec
 	makeindex spec
-	pdflatex spec
+	pdflatex -file-line-error -halt-on-error spec
 
 usedvi:
 	latex spec
