--- a/runtime/etc/Makefile.include
+++ b/runtime/etc/Makefile.include
@@ -1,5 +1,6 @@
 CHPL_MAKE_PLATFORM = $(shell $(CHAPEL_ROOT)/util/platform)
 include $(CHAPEL_ROOT)/make/Makefile.base
+include $(CHAPEL_ROOT)/runtime/etc/Makefile.threads-$(CHPL_THREADS)
 CHAPEL_RT_INC_DIR = $(CHAPEL_ROOT)/runtime/include/threads-$(CHPL_THREADS) -I$(CHAPEL_ROOT)/runtime/include
 CHAPEL_RT_LIB_DIR = $(CHAPEL_ROOT)/lib/$(CHPL_MAKE_PLATFORM)
 
