--- a/runtime/make/Makefile.runtime.foot
+++ b/runtime/make/Makefile.runtime.foot
@@ -33,11 +33,19 @@ echoruntimedir:
 # pattern-based rules
 #
 
-%.depend: %.c $(PLATFORM_DIR)
-	@$(CMAKEDEPEND) -MT '$(CHPL_MAKE_PLATFORM)/$*.o' $(RUNTIME_CFLAGS) $< | grep -v \^\# >> $(CVS_DEPENDS).tmp
+RUNTIME_OBJ_DIR = ./$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)/.timestamp
 
-$(CHPL_MAKE_PLATFORM)/%.o: %.c $(PLATFORM_DIR)
+%.depend: %.c $(RUNTIME_OBJ_DIR)
+	@$(CMAKEDEPEND) -MT '$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)/$*.o' $(RUNTIME_CFLAGS) $< | grep -v \^\# >> $(CVS_DEPENDS).tmp
+
+$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)/%.o: %.c $(RUNTIME_OBJ_DIR)
 	$(CC) -c $(RUNTIME_CFLAGS) -o $@ $<
+
+$(RUNTIME_OBJ_DIR):
+	@echo making $(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS) subdirectory to store platform-specific files
+	@-mkdir -p $(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS) > /dev/null 2>&1
+	@-touch $(RUNTIME_OBJ_DIR)
+
 
 FORCE:
 
