--- a/runtime/src/Makefile.include
+++ b/runtime/src/Makefile.include
@@ -1,4 +1,4 @@
-COMMON_OBJDIR = $(RUNTIME_ROOT)/src/$(CHPL_MAKE_PLATFORM)
+COMMON_OBJDIR = $(RUNTIME_ROOT)/src/$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)
 
 ALL_SRCS += src/*.c
 
