Added timers.  Added thread-limit throttling to parallel tree creation.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10942 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/uts/Makefile
+++ b/test/studies/uts/Makefile
@@ -1,12 +1,18 @@
 CC=chpl
 CFLAGS=-O --no-bounds-checks
 
-TARGETS=uts
+TARGETS=uts btdl bttl
 
-all: uts
+all: uts btdl bttl
 
 uts: uts.chpl sha1_rng.chpl
 	$(CC) $(CFLAGS) -o $@ --ccflags="brg_sha1.c" $+
+
+btdl: BinaryTree_DepthLimit.chpl
+	$(CC) $(CFLAGS) -o $@ $+
+
+bttl: BinaryTree_ThreadLimit.chpl
+	$(CC) $(CFLAGS) -o $@ $+
 
 clean:
 	rm -f *.o *.gch $(TARGETS)
