--- a/test/studies/uts/Makefile
+++ b/test/studies/uts/Makefile
@@ -11,5 +11,8 @@ uts-seq: uts.chpl sha1_rng.chpl
 uts-par: uts.chpl sha1_rng.chpl
 	$(CC) $(CFLAGS) -o $@ --ccflags="brg_sha1.c" -sparallel=true $+
 
+uts-deq: uts_deq.chpl sha1_rng.chpl dequeue.chpl
+	$(CC) $(CFLAGS) -o $@ --ccflags="brg_sha1.c" $+
+
 clean:
 	rm -f $(TARGETS)
