Added Makefile skeleton and empty files for eventual distinction between different comm packages, none and gasnet.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10968 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/make/Makefile.base
+++ b/make/Makefile.base
@@ -21,6 +21,13 @@ CHPL_THREADS = pthreads
 endif
 
 #
+# use none if CHPL_COMM is not specified
+#
+ifndef CHPL_COMM
+CHPL_COMM = none
+endif
+
+#
 # default CFLAGS, based on other settings
 #
 ifeq ($(DEBUG), 1)
