--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -18,6 +18,7 @@ include $(RUNTIME_ROOT)/make/Makefile.runtime.head
 SUBDIRS = \
 	src \
 	threads-$(CHPL_THREADS) \
+	comm-$(CHPL_COMM) \
 
 
 #
@@ -25,14 +26,16 @@ SUBDIRS = \
 #
 include src/Makefile.include
 include threads-$(CHPL_THREADS)/Makefile.include
+include comm-$(CHPL_COMM)/Makefile.include
 
 CVS_SRCS = 
 
 RUNTIME_OBJS = \
 	$(COMMON_OBJS) \
-	$(THREADS_OBJS)
+	$(THREADS_OBJS) \
+	$(COMM_OBJS) \
 
-RUNTIME_DIR = ../lib/$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)
+RUNTIME_DIR = ../lib/$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)/comm-$(CHPL_COMM)
 RUNTIME_LIB = $(RUNTIME_DIR)/libchpl.a
 RUNTIME_DIR_TIMESTAMP = $(RUNTIME_DIR)/timestamp
 
@@ -54,9 +57,9 @@ include $(RUNTIME_ROOT)/make/Makefile.runtime.rules
 $(RUNTIME_LIB): $(RUNTIME_OBJS) $(RUNTIME_DIR_TIMESTAMP)
 	$(AR) -rc $@ $(RUNTIME_OBJS)
 	$(RANLIB) $@
-	-@(which etags > /dev/null 2>&1 && echo "Updating TAGS..." && etags -o ../TAGS $(RUNTIME_SRCS) include/*.h include/threads-$(CHPL_THREADS)/*.h) || echo "etags not available"
+	-@(which etags > /dev/null 2>&1 && echo "Updating TAGS..." && etags -o ../TAGS $(RUNTIME_SRCS) include/*.h include/threads-$(CHPL_THREADS)/*.h include/comm-$(CHPL_COMM)/*.h) || echo "etags not available"
 
-$(RUNTIME_DIR)/main.o: src/$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)/main.o
+$(RUNTIME_DIR)/main.o: src/$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)/comm-$(CHPL_COMM)/main.o
 	cp $< $@
 
 $(RUNTIME_DIR_TIMESTAMP):
