This is only the simple elimination-based solver without any random search.  I pulled this code out to focus on simplifying it using some creative iterators. It isn't able to solve the evil and outlaw puzzles, but will solve easy-hard.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10976 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/sudoku/dinan/Makefile
+++ b/test/studies/sudoku/dinan/Makefile
@@ -1,7 +1,7 @@
 CC=chpl
 CCFLAGS=-O --no-bounds-checks
 
-TARGETS=sudoku sudoku-smart
+TARGETS=sudoku sudoku-smart sudoku-simple
 
 all: $(TARGETS)
 
@@ -9,6 +9,9 @@ sudoku: sudoku.chpl
 	$(CC) $(CCFLAGS) -o $@ $+
 
 sudoku-smart: sudoku-smart.chpl
+	$(CC) $(CCFLAGS) -o $@ $+
+
+sudoku-simple: sudoku-simple.chpl
 	$(CC) $(CCFLAGS) -o $@ $+
 
 clean:
