Updated with --ldflags.  Added 10^8 node trees, can't run them yet though due to memory footprint.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10989 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/uts/Makefile
+++ b/test/studies/uts/Makefile
@@ -1,22 +1,22 @@
 CC=chpl
-#CFLAGS=-O --no-bounds-checks
-CFLAGS=-g
+CFLAGS=-O --no-bounds-checks
+#CFLAGS=-g
 
 TARGETS=uts-par uts-seq uts-deq uts-deq-seq
 
 all: uts-par uts-seq uts-deq uts-deq-seq
 
 uts-seq: uts.chpl sha1_rng.chpl
-	$(CC) $(CFLAGS) -o $@ --ccflags="brg_sha1.c" --serial -sparallel=false $+
+	$(CC) $(CFLAGS) -o $@ --ldflags="brg_sha1.c" --serial -sparallel=false $+
 
 uts-par: uts.chpl sha1_rng.chpl
-	$(CC) $(CFLAGS) -o $@ --ccflags="brg_sha1.c" -sparallel=true $+
+	$(CC) $(CFLAGS) -o $@ --ldflags="brg_sha1.c" -sparallel=true $+
 
 uts-deq: uts_deq.chpl sha1_rng.chpl dequeue.chpl
-	$(CC) $(CFLAGS) -o $@ --ccflags="brg_sha1.c" $+
+	$(CC) $(CFLAGS) -o $@ --ldflags="brg_sha1.c" $+
 
 uts-deq-seq: uts_deq.chpl sha1_rng.chpl dequeue.chpl
-	$(CC) $(CFLAGS) -o $@ --ccflags="brg_sha1.c" -sparallel=false --serial $+
+	$(CC) $(CFLAGS) -o $@ --ldflags="brg_sha1.c" -sparallel=false --serial $+
 
 clean:
 	rm -f $(TARGETS)
