Switched reference to CHPL_HOME to CHAPEL_ROOT in the gasnet Makefile for the runtime.  We use CHAPEL_ROOT in the Makefiles for the compiler- generated code to avoid any conflicts with the user's CHPL_HOME environment variable which may not match how their code was compiled.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11033 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/etc/Makefile.comm-gasnet
+++ b/runtime/etc/Makefile.comm-gasnet
@@ -1,4 +1,4 @@
-GASNET_INSTALL = $(CHPL_HOME)/third-party/gasnet/install
+GASNET_INSTALL = $(CHAPEL_ROOT)/third-party/gasnet/install
 
 include $(GASNET_INSTALL)/include/udp-conduit/udp-par.mak
 
