Redefined GASNET_INSTALL Makefile variable in terms of RUNTIME_ROOT rather than CHPL_HOME in order to continue supporting the ability to make the compiler and runtime without setting CHPL_HOME first.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11081 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/comm-gasnet/Makefile.share
+++ b/runtime/comm-gasnet/Makefile.share
@@ -7,7 +7,7 @@ SRCS = $(CVS_SRCS)
 COMM_OBJS = \
 	$(COMM_SRCS:%.c=$(COMM_OBJDIR)/%.o)
 
-GASNET_INSTALL = $(CHPL_HOME)/third-party/gasnet/install
+GASNET_INSTALL = $(RUNTIME_ROOT)/../third-party/gasnet/install
 
 include $(GASNET_INSTALL)/include/udp-conduit/udp-par.mak
 
