Moved third-party GASNet installation into a subdirectory named after CHPL_PLATFORM so that a single source tree can support multiple platforms (e.g., linux, linux64, sunos).  This will require anyone who is using GASNet to rebuild their GASNet directory (which can be done by cd-ing into third-party and executing make).
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11120 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/comm-armci/Makefile.share
+++ b/runtime/comm-armci/Makefile.share
@@ -7,7 +7,7 @@ SRCS = $(CVS_SRCS)
 COMM_OBJS = \
 	$(COMM_SRCS:%.c=$(COMM_OBJDIR)/%.o)
 
-ARMCI_INSTALL = $(RUNTIME_ROOT)/../third-party/armci/install
+ARMCI_INSTALL = $(RUNTIME_ROOT)/../third-party/armci/install/$(CHPL_MAKE_PLATFORM)
 
 INCL_CFLAGS += -I$(ARMCI_INSTALL)/include
 
