--- a/runtime/etc/Makefile.comm-gasnet
+++ b/runtime/etc/Makefile.comm-gasnet
@@ -1,4 +1,4 @@
-GASNET_INSTALL = $(CHAPEL_ROOT)/third-party/gasnet/install
+GASNET_INSTALL = $(CHAPEL_ROOT)/third-party/gasnet/install/$(CHPL_MAKE_PLATFORM)
 
 include $(GASNET_INSTALL)/include/udp-conduit/udp-par.mak
 
