Fixed runtime Makefiles so that DEBUG is on by default for developers and OPTIMIZE is on by default for non-developers, as with the compiler.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11126 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/runtime/make/Makefile.runtime.head
+++ b/runtime/make/Makefile.runtime.head
@@ -1,4 +1,14 @@
 #
+# settings for the build
+#
+ifdef CHPL_DEVELOPER
+DEBUG=1
+else
+OPTIMIZE=1
+endif
+
+
+#
 # include the standard Chapel Makefile.base
 #
 
