--- a/runtime/make/Makefile.runtime.foot
+++ b/runtime/make/Makefile.runtime.foot
@@ -39,6 +39,7 @@ RUNTIME_OBJ_DIR = ./$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)/comm-$(CHPL_CO
 	@$(CMAKEDEPEND) -MT '$(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)/comm-$(CHPL_COMM)/$*.o' $(RUNTIME_CFLAGS) $< | grep -v \^\# >> $(CVS_DEPENDS).tmp
 
 $(CHPL_MAKE_PLATFORM)/threads-$(CHPL_THREADS)/comm-$(CHPL_COMM)/%.o: %.c $(RUNTIME_OBJ_DIR)
+	@if [ `grep "chplrt.h" $< | wc -l` -ne 1 ]; then echo "PROBLEM:  $< does not include 'chplrt.h'."; exit 1; fi
 	$(CC) -c $(RUNTIME_CFLAGS) -o $@ $<
 
 $(RUNTIME_OBJ_DIR):
