Moved uts.chpl to uts_rec.chpl -- this implementation is recursive uts_deq.chpl is the iterative implementation.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11191 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/uts/Makefile
+++ b/test/studies/uts/Makefile
@@ -2,15 +2,15 @@ CC=chpl
 CFLAGS=-O --no-bounds-checks
 #CFLAGS=-g
 
-TARGETS=uts-par uts-seq uts-deq uts-deq-seq
+TARGETS=uts-rec uts-rec-seq uts-deq uts-deq-seq
 
-all: uts-par uts-seq uts-deq uts-deq-seq
+all: $(TARGETS)
 
-uts-seq: uts.chpl sha1_rng.chpl
-	$(CC) $(CFLAGS) -o $@ --ldflags="brg_sha1.c" --serial -sparallel=false $+
-
-uts-par: uts.chpl sha1_rng.chpl
+uts-rec: uts_rec.chpl sha1_rng.chpl
 	$(CC) $(CFLAGS) -o $@ --ldflags="brg_sha1.c" -sparallel=true $+
+
+uts-rec-seq: uts_rec.chpl sha1_rng.chpl
+	$(CC) $(CFLAGS) -o $@ --ldflags="brg_sha1.c" --serial -sparallel=false $+
 
 uts-deq: uts_deq.chpl sha1_rng.chpl dequeue.chpl
 	$(CC) $(CFLAGS) -o $@ --ldflags="brg_sha1.c" $+
