Worked around array member problems.  Function1d does something now!  It computes and outputs the phi coefficient matrix.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11300 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/madness/dinan/mad_chapel/Makefile
+++ b/test/studies/madness/dinan/mad_chapel/Makefile
@@ -1,5 +1,9 @@
+GENC   = gen_c
+
 CC     = chpl
-CFLAGS =
+CFLAGS = -g --savec=$(GENC) --short-names --print-passes
+#CFLAGS = -g --savec=$(GENC) --short-names --print-passes --ccflags "-Wall"
+#CFLAGS = -g --savec=$(GENC) --no-cg-cpp-lines --short-names --print-passes --ccflags "-Wall"
 
 SOURCES= Fn1d.chpl       \
          FTree.chpl      \
@@ -13,10 +17,11 @@ SOURCES= Fn1d.chpl       \
 all: 1d
 
 1d: $(SOURCES)
-	$(CC) -o $@ $+
+	$(CC) $(CFLAGS) -o $@ $+
 
 
 .PHONY: clean
         
 clean:
 	rm -f 1d
+	rm -rf $(GENC)
