Worked around arrays of arrays using an array of records.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11318 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/madness/dinan/mad_chapel/Makefile
+++ b/test/studies/madness/dinan/mad_chapel/Makefile
@@ -17,7 +17,7 @@ SOURCES= Fn1d.chpl       \
 all: 1d
 
 1d: $(SOURCES)
-	$(CC) $(CFLAGS) -o $@ $+
+	$(CC) $(CFLAGS) --main-module Function1d -o $@ $+
 
 
 .PHONY: clean
