Numerical function evaluation is working.  We can take the numerical (scaling function basis) representation of the analytic function f() and evaluate it on a particular value.  This is a huge sanity check for all of the underlying mathematical machinery -- so far things look good.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@11332 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/studies/madness/dinan/mad_chapel/Makefile
+++ b/test/studies/madness/dinan/mad_chapel/Makefile
@@ -1,7 +1,7 @@
 GENC   = gen_c
 
 CC     = chpl
-CFLAGS = -g --savec=$(GENC) --short-names --print-passes
+CFLAGS = --instantiate-max 512 -g --savec=$(GENC) --short-names --print-passes
 #CFLAGS = -g --savec=$(GENC) --short-names --print-passes --ccflags "-Wall"
 #CFLAGS = -g --savec=$(GENC) --no-cg-cpp-lines --short-names --print-passes --ccflags "-Wall"
 
