--- a/test/users/franzf/v0/chpl/Makefile
+++ b/test/users/franzf/v0/chpl/Makefile
@@ -1,6 +1,6 @@
 NUMRUNS ?= 1000
 CHPL = chpl
-FLAGS = -O --print-passes
+FLAGS = -O --print-passes --no-bounds-checks --savec output
 
 FFTLIB = fft_2.chpl fft_4.chpl fft_8.chpl fft_16.chpl fft_32.chpl fft_64.chpl fft_128.chpl fft_256.chpl fft_512.chpl fft_1024.chpl fft_2048.chpl 
 
